Fix search results with map on small screens
Fixes #554

--- a/localwiki/themes/sapling/assets/css/site.css
+++ b/localwiki/themes/sapling/assets/css/site.css
@@ -1297,7 +1297,7 @@ div.templates li {
 
 @media screen and (max-width: 500px) {
     #search_results #results_list.with_map {
-        margin-top: 260px;
+        padding-top: 240px;
     }
     #search_results #map {
         margin-top: 0.3em;
@@ -1306,6 +1306,7 @@ div.templates li {
 @media screen and (max-width: 700px) {
     #search_results #results_list.with_map {
         margin-top: 1em;
+        margin-right: 0;
     }
 }
 
